fix(website): correct various layout bugs
These changes have been tested on every major browser, including IE and Safari. They seem okay.

--- a/website/builder/css/main.css
+++ b/website/builder/css/main.css
@@ -3,10 +3,11 @@ html, body {
   margin: 0;
   font-family: 'Source Sans Pro', 'Helvetica Neue', Arial, sans-serif;
   color: #333;
+  height: 100%;
 }
 
 #app {
-
+  height: 100%;
 }
 
 .button {
@@ -63,10 +64,10 @@ h3, h4, h5, h6 {
   background-color: #DD4A68;
   color: #FFF;
   padding: 5px 40px;
-  z-index: 99999;
+  z-index: 90;
 }
 
-@media (max-width: 1000px) {
+@media (max-width: 1240px) {
   .beta {
     left: auto;
     right: -30px;
